--- a/_config.yml
+++ b/_config.yml
@@ -27,8 +27,8 @@ defaults:
 
 
 
-title: "bit-ranger"
-email: sincerebravefight@gmail.com
+title: "连边的博客"
+email: 670472241@qq.com
 description: ""
 github:
   username: bit-ranger
