--- a/_config.yml
+++ b/_config.yml
@@ -27,9 +27,9 @@ defaults:
 
 
 
-title: "连边的博客"
+title: "连边"
 email: 670472241@qq.com
-description: ""
+description: "程序员连边的博客"
 github:
   username: bit-ranger
 swiftype:
