--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ defaults:
 
 title: "连边"
 email: 670472241@qq.com
-description: "程序员连边的博客"
+description: "订阅号：连边"
 github:
   username: bit-ranger
 swiftype:
