--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ title: "连边"
 email: 670472241@qq.com
 description: "订阅号：连边"
 github:
-  username: bit-ranger
+  username: lianbian
 swiftype:
   searchId: iXZyPokVfxFaBTvi64Y6
 gitment:
