--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ github:
 swiftype:
   searchId: iXZyPokVfxFaBTvi64Y6
 gitment:
-    repo: lianbian
+    repo: lianbian.github.io
     client_id: b4d5f3996c2b1038c398
     client_secret:  da7b579f2938ca7bc72d7c0f16dccc5e78342c57
 
