增加订阅号图片

--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ defaults:
 
 title: "连边"
 email: 670472241@qq.com
-description: "订阅号：连边"
+description: "程序员连边的个人博客，更多信息可关注订阅号：连边"
 github:
   username: lianbian
 swiftype:
