--- a/_config.yml
+++ b/_config.yml
@@ -34,5 +34,5 @@ github:
   username: lianbian
 swiftype:
   searchId: iXZyPokVfxFaBTvi64Y6
-url: "https://lianbian.github.io/"
-imgrepo: "https://lianbian.github.io/static/img"
+url: "http://www.lianbian.net/"
+imgrepo: "http://www.lianbian.net/static/img"
